# recipe-tool

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  SUPPORT.md  collect_files.py  complex_recipe_files.md  my_idea.md  mypy.ini  output_files.md  pyproject.toml  pytest.ini  recipe-tool-workspace.code-workspace  recipe-tool.code-workspace  recipe_executor.old.txt  recipe_executor_files.md  recipe_tool.py  requirements.txt  test_settings_flow.py
apps/document-generator/: .az-deploy.sh  .deployment  .deploymentignore  .gitignore  AGENTS.md  AZURE_DEPLOYMENT.md  Makefile  PLAN.md  README.md  app.py  convert_examples.py  deploy.sh  pyproject.toml  requirements.txt  startup.py  test.md
apps/document-generator/document_generator/: main.py
apps/document-generator/document_generator/cli/: __init__.py  __main__.py  main.py
apps/document-generator/document_generator/config/: __init__.py  settings.py
apps/document-generator/document_generator/executor/: __init__.py  runner.py
apps/document-generator/document_generator/models/: __init__.py  outline.py
apps/document-generator/document_generator/schema/: __init__.py  validator.py
apps/document-generator/document_generator_app/: __init__.py  app.py  config.py  main.py  package_handler.py  session.py  settings_sidebar.py  ui.py
apps/document-generator/examples/: launch-documentation.docpack  readme.docpack
apps/document-generator/plans/: IMPLEMENTATION_PROGRESS.md  README.md  migration-guide.md  simplified-ui-plan.md  technical-implementation.md  visual-design-mockup.md
apps/document-generator/scripts/: build_deployment.py  refresh_examples.py
apps/document-generator/tests/cli/: test_main.py
apps/experimental/document-generator-v1/: .gitignore  README.md  pyproject.toml  startup.py
apps/experimental/document-generator-v2/: .gitignore  Makefile  README.md  deploy.sh  pyproject.toml  requirements.txt  startup.py
apps/recipe-executor/: .env.example  .ruff.toml  Makefile  README.md  pyproject.toml
apps/recipe-executor/docs/: README.md  __init__.py  api.md  code_review.md  code_review_findings.md  current_work.md  debugging.md  development.md  implementation_report.md  implementation_summary.md  reuse_as_component.md  usage.md
apps/recipe-executor/plans/: development.md  reuse_as_component.md
apps/recipe-executor/recipe_executor_app/: __init__.py  app.py  config.py  core.py  settings_sidebar.py  ui.py  ui_components.py  utils.py
apps/recipe-executor/tests/: README.md  __init__.py  conftest.py  test_app.py  test_core.py  test_integration.py  test_ui.py  test_ui_components.py  test_utils.py
apps/recipe-tool/: .env.example  Makefile  README.md  pyproject.toml
apps/recipe-tool/docs/: current_work.md  development.md  implementation_summary.md  usage.md
apps/recipe-tool/examples/: file-rollup-tool-idea.md  hello-world-spec-idea.md  simple-spec-recipe-idea.md  simple_spec_recipe.json
apps/recipe-tool/plans/: README.md  code_review.md  implementation_report.md  implementation_summary.md  reuse_as_component.md
apps/recipe-tool/recipe_tool_app/: __init__.py  app.py  config.py  context_manager.py  core.py  error_handler.py  example_handler.py  file_operations.py  path_resolver.py  recipe_processor.py  settings_sidebar.py  ui_components.py  utils.py
apps/recipe-tool/recipes/: recipe-to-mermaid-idea.md
apps/recipe-tool/tests/: __init__.py  test_app.py  test_core.py  test_example_handler.py  test_integration.py  test_path_resolver.py  test_recipe_processor.py  test_ui.py  test_ui_components.py  test_utils.py
docpack-file/: README.md  pyproject.toml
docpack-file/docpack_file/: __init__.py
document_generator_ui/: PLAN.md  README.md  __init__.py  outline.json  pyproject.toml
document_generator_ui/server/: __init__.py  main.py
document_generator_ui/static/: index.html
mcp-servers/docs-server/: .env.example  .gitignore  Makefile  README.md  example-config.json  pyproject.toml
mcp-servers/docs-server/docs_server/: __init__.py  cli.py  config.py  loader.py  server.py
mcp-servers/docs-server/examples/: project-docs.json
mcp-servers/docs-server/tests/: __init__.py  test_config.py  test_loader.py
mcp-servers/python-code-tools/: README.md  pyproject.toml  pyrightconfig.json
mcp-servers/python-code-tools/examples/: README.md  direct_mcp_client_example.py  direct_project_linting_example.py  project_linting_example.py  stdio_client_example.py
mcp-servers/python-code-tools/python_code_tools/: __init__.py  __main__.py  cli.py  server.py
mcp-servers/python-code-tools/tests/: __init__.py  test_placeholder.py
mcp-servers/recipe-tool/: README.md  pyproject.toml
mcp-servers/recipe-tool/recipe_tool_mcp_server/: __init__.py  cli.py
mcp-servers/recipe-tool/tests/: __init__.py  test_placeholder.py
recipe-executor/: Makefile  README.md  pyproject.toml
recipe-executor/recipe_executor/: config.py  context.py  executor.py  logger.py  main.py  models.py  protocols.py
recipe-executor/recipe_executor/llm_utils/: azure_openai.py  azure_responses.py  llm.py  mcp.py  responses.py
recipe-executor/recipe_executor/steps/: __init__.py  base.py  conditional.py  docpack_create.py  docpack_extract.py  execute_recipe.py  llm_generate.py  loop.py  mcp.py  parallel.py  read_files.py  registry.py  set_context.py  shell.py  write_files.py
recipe-executor/recipe_executor/utils/: models.py  templates.py
recipe-executor/tests/: __init__.py
recipe-tool/: README.md  pyproject.toml
recipe-tool/recipe_tool/: __init__.py  app.py
recipe-tool/tests/: __init__.py
recipe_executor_ux/: README.md  pyproject.toml
recipe_executor_ux/app/: main.py
recipe_executor_ux/app/api/: executions.py  recipes.py
recipe_executor_ux/app/core/: execution.py
recipe_executor_ux/app/models/: schema.py
recipe_executor_ux/recipes/: Test.json
recipe_executor_ux/static/css/: style.css
recipe_executor_ux/static/js/: app.js
recipe_executor_ux/templates/: index.html
shared/gradio-components/: pyproject.toml
shared/gradio-components/gradio_components/: __init__.py  config_manager.py  settings_sidebar.py
(+1115 files in other folders)
