[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-tool"
version = "0.1.3"
description = "Tool for executing AI-powered recipes"
authors = [{name = "MADE:Explorations Team"}]
requires-python = ">=3.11"
dependencies = [
    "recipe-executor",
]

[project.scripts]
recipe-tool = "recipe_tool.app:main"

[tool.setuptools]
package-dir = {"" = "recipe-tool"}

[tool.uv.workspace]
members = [
    "recipe-executor",
    "docpack", 
    "shared/gradio-components",
    "apps/document-generator",
    "apps/experimental/document-generator-v2",
    "apps/recipe-executor",
    "apps/recipe-tool",
    "mcp-servers/docs-server",
    "mcp-servers/python-code-tools",
    "mcp-servers/recipe-tool",
]
exclude = ["recipe-tool"]

[tool.uv.sources]
# Core libraries
recipe-executor = { workspace = true }
recipe-tool = { workspace = true }
docpack = { workspace = true }
gradio-components = { workspace = true }
# Apps
document-generator-app = { workspace = true }
document-generator-v2-app = { workspace = true }
recipe-executor-app = { workspace = true }
recipe-tool-app = { workspace = true }
# MCP servers
docs-server = { workspace = true }
python-code-tools = { workspace = true }
recipe-tool-mcp-server = { workspace = true }

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "debugpy>=1.8.14",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.10",
    "twine>=6.1.0",
]
