[project]
name = "document-generator-ui"
version = "0.1.0"
description = "FastAPI backend and static SPA for the Document Generator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "python-multipart>=0.0.20",
 "uvicorn>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
