[project]
name = "recipe-executor-ux"
version = "0.1.0"
description = "App for exploring recipes and executing them."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
