[project]
name = "document-generator"
version = "0.1.0"
description = "Document generator from outline document and resources"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.29.1",
    "recipe-tool>=0.1.1",
    "jsonschema>=4.0.0",
    "typer>=0.7.0",
    "pydantic>=1.10.0",
    "python-dotenv>=0.20.0",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "debugpy>=1.8.14",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.uv.sources]
recipe-tool = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
