[project]
name = "recipe_executor_app"
version = "0.1.0"
description = "Gradio app for using the recipe-executor library"
requires-python = ">=3.11"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "gradio>=5.30.0",
    "gradio-components>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "recipe-tool>=0.1.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]

[tool.pyright]
include = ["recipe_executor_app"]
exclude = ["**/__pycache__", "tests"]
reportMissingImports = true
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = [
    # Ignore websockets.legacy deprecation warnings from Gradio's internals
    "ignore::DeprecationWarning:websockets.legacy:",
    # Ignore other gradio-related warnings
    "ignore::ResourceWarning",
    "ignore::DeprecationWarning:gradio:",
    # Ignore httpx warnings
    "ignore::Warning:httpx:",
]
# Capture log during test execution to avoid printing log errors
log_cli = false
log_level = "ERROR"

[project.scripts]
recipe-executor-app = "recipe_executor_app.app:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["recipe_executor_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
