[project]
name = "recipe-tool-app"
version = "0.1.0"
description = "Gradio app combining recipe execution and recipe creation features"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio[mcp]>=5.30.0",
    "gradio-components>=0.1.0",
    "python-dotenv>=1.1.0",
    "recipe-executor-app>=0.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.2",
]

[tool.pyright]
include = ["recipe_tool_app"]
exclude = ["**/__pycache__", "tests"]
reportMissingImports = true
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = [
    # Ignore websockets.legacy deprecation warnings from Gradio's internals
    "ignore::DeprecationWarning:websockets.legacy:",
]

[project.scripts]
recipe-tool-app = "recipe_tool_app.app:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["recipe_tool_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
