[project]
name = "recipe-tool-mcp-server"
version = "0.1.0"
description = "MCP server wrapping the recipe-tool CLI"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.9.1", "python-dotenv>=1.1.0", "recipe-tool"]

[project.scripts]
# Main entry point
recipe-tool-mcp-server = "recipe_tool_mcp_server.cli:main"

# Convenience scripts for specific transports
recipe-tool-mcp-server-stdio = "recipe_tool_mcp_server.cli:stdio_main"
recipe-tool-mcp-server-sse = "recipe_tool_mcp_server.cli:sse_main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["recipe_tool_mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
