[project]
name = "document-generator-v1"
version = "0.1.0"
description = "Gradio app for using the document-generator recipe"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.30.0",
    "jsonschema>=4.24.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "recipe-executor>=0.1.3",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "debugpy>=1.8.14",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[project.scripts]
document-generator-v1-app = "document_generator_v1_app.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["document_generator_v1_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
