[project]
name = "document_generator_v2_app"
version = "0.1.0"
description = "A Gradio app for building documents with an enhanced interface"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
    "recipe-executor>=0.1.1",
    "docpack>=0.1.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=0.20.0",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "debugpy>=1.8.14",
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]

[project.scripts]
document-generator-v2-app = "document_generator_v2_app.app:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["document_generator_v2_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
